samples/_failures_safe/1761495620_16972b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fae5e1d4.c: In function ‘main’:
./samples/SAFE/__tmp_fae5e1d4.c:158:15: error: expected ‘;’ at end of input
  158 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_fae5e1d4.c:158:9: error: expected declaration or statement at end of input
  158 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_fae5e1d4.c:158:9: error: expected declaration or statement at end of input
